BE-011 cria: perfil dev; rota p listar regrar por role; testes